# mail-organizer

./: .dockerignore  .gitignore  Cargo.toml  Chart.yaml  Dockerfile  README.md  example_config.yaml  go.mod  go.sum  main.go
pkg/trigger/: date-before.go  from-domain-contains.go  from-personalname-contains.go  rule.go  subject-contains.go  subject-endswith.go  subject-exact.go  subject-startswith.go  unread.go
src/: main.rs
templates/: cron.yaml  secret.yaml
