[package]
name = "mail-organizer"
version = "0.1.0"
authors = ["Maximilian Schoenenberg <max.schoenenberg@me.com>"]
edition = "2018"
readme = "./README.md"
license-file = "./LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
imap = "2.3.0"
native-tls = "^0.2.4"
serde = { version = "^1.0.116", features = ["derive"] }
serde_yaml = "0.8"